--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,27 @@ body {
     color: white;
     background: black;
 }
+
+
+
+
+
+
+
+p {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    color: #f50101;
+    line-height: 1.5;
+  }
+
+
+
+
+h1{
+
+
+
+
+
+}
